// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline Dialog should allow passing of custom className 1`] = `
.emotion-0 {
  position: relative;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
}

<InlineDialog
  className="test-class"
  renderTrigger={[Function]}
>
  <InlineDialogContainer
    className="test-class"
  >
    <div
      className="test-class emotion-0 emotion-1"
    >
      <Manager>
        <Reference>
          <button
            onClick={[Function]}
            type="button"
          >
            close
          </button>
        </Reference>
      </Manager>
    </div>
  </InlineDialogContainer>
</InlineDialog>
`;

exports[`Inline Dialog should correctly apply styling 1`] = `
.emotion-0 {
  position: relative;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
}

<InlineDialog
  renderTrigger={[Function]}
>
  <InlineDialogContainer>
    <div
      className="emotion-0 emotion-1"
    >
      <Manager>
        <Reference>
          <button
            onClick={[Function]}
            type="button"
          >
            close
          </button>
        </Reference>
      </Manager>
    </div>
  </InlineDialogContainer>
</InlineDialog>
`;
